--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,73 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: Roboto, sans-serif;
+}
+
+.home-section {
+    background-color: #1F2937;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    gap: 50px;
+    padding-bottom: 50px;
+}
+
+.header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px
+}
+
+.header .logo {
+    color: #F9FAF8;
+    font-size: 24px;
+}
+
+.header ul {
+    display: flex;
+    gap:20px;
+    list-style-type: none;   
+    font-size:18px;
+}
+
+.header a {
+    color: #E5E7EB;
+    text-decoration: none;
+}
+
+.main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:50px;
+    padding: 50px 0px;
+}
+
+.main .hero,
+.main img {
+    width:460px;
+    height: 230px;
+}
+
+.hero h1 {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight:900;
+}
+
+.hero p{
+    color: #E5E7EB;
+    font-size:18px;
+}
+
+.hero button {
+    border: none;
+    border-radius: 5px;
+    background-color: #3882F6;
+    padding: 8px 30px;
+    color: #E5E7EB;
+    font-weight:900;
+    margin-top: 5px;
 }
