--- a/css/style.css
+++ b/css/style.css
@@ -72,3 +72,38 @@
     font-weight:900;
     margin-top: 5px;
 }
+
+.info-section {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    gap:20px;
+    padding: 40px;
+    margin-bottom: 50px;
+}
+
+.info-section h2 {
+    margin-bottom: 30px;
+    font-size: 36px;
+    color:#1F2937;
+    font-weight: 900;
+}
+
+.info-section img {
+    width: 100%;
+    height: 150px;
+    border: #3882F6 solid;
+    border-radius: 10px;
+}
+.info-section .item {
+    max-width: 150px;
+    text-align: center;
+    color: #1F2937;
+}
+
+.info-section .content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
