Add css styling to the footer section
Arranging footer section items using flexbox layout mode.

--- a/css/style.css
+++ b/css/style.css
@@ -169,3 +169,13 @@
     color: #F9FAF8;
     font-weight:900;
 }
+
+/* footer */
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: #E5E7EB;
+    padding: 30px;
+}
