--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,8 @@
 
 .quote-section p {
     font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
     color: #1F2937;
 }
 .quote-section .container {
