--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
 
 .header {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     padding: 10px
@@ -41,6 +42,7 @@
 
 .main {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap:50px;
@@ -105,6 +107,7 @@
 
 .info-section .content {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 40px;
@@ -150,6 +153,7 @@
     width: 950px;
     height: 150px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     border-radius: 5px;    
